kubernetes-manifests/mcg-demo-deploy-sg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mcg-demo
  name: mcg-demo
  namespace: mcg-demo
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mcg-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2021-10-06T13:31:53+08:00"
      creationTimestamp: null
      labels:
        app: mcg-demo
    spec:
      containers:
      - image: gcr.io/jonchin-gps-argolis/mcg-demo
        imagePullPolicy: Always
        name: mcg-demo
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
