kubernetes-manifests/mcg-service-sg-export.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcg-demo-sg
  namespace: mcg-demo
spec:
  selector:
    app: mcg-demo
  ports:
  - port: 8080
    targetPort: 8080
