kubernetes-manifests/mcg-external-httproute.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: mcg-demo-route
  namespace: mcg-demo
  labels:
    gateway: external-http
spec:
  hostnames:
  - "*"
  rules:
  - forwardTo:
    - backendRef:
        group: net.gke.io
        kind: ServiceImport
        name: mcg-demo-sg
      port: 8080
  - matches:
    - path:
        type: Prefix
        value: /indo
    forwardTo:
    - backendRef:
        group: net.gke.io
        kind: ServiceImport
        name: mcg-demo-in
      port: 8080
  - matches:
    - path:
        type: Prefix
        value: /sg
    forwardTo:
    - backendRef:
        group: net.gke.io
        kind: ServiceImport
        name: mcg-demo-sg
      port: 8080
