kubernetes-manifests/mcg-internal-httproute.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: mcg-internal-route
  namespace: mcg-demo
  labels:
    gateway: internal-http
spec:
  hostnames:
  - "*"
  rules:
  - forwardTo:
    - backendRef:
        group: net.gke.io
        kind: ServiceImport
        name: mcg-demo-sg
      port: 8080
      weight: 90
    - backendRef:
        group: net.gke.io
        kind: ServiceImport
        name: mcg-demo-in
      port: 8080
      weight: 10
